--- a/.github/workflows/system-tests-files/report_index_template.html
+++ b/.github/workflows/system-tests-files/report_index_template.html
@@ -29,16 +29,18 @@ This live dashboard displays the current health of Teradata system tests availab
     <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(1)')">SystemName</th>
     <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(2)')">Successes</th>
     <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(3)')">Failures</th>
-	<th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(4)')">Duration</th>
-	<th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(5)')">Last 10 runs (latest on the right)</th>
+	  <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(4)')">Duration</th>
+    <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(4)')">Last Run Date</th>
+    <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(5)')">Last 10 runs (latest on the right)</th>
   </tr>
 
 {% for item in items %}
 <TR class="item">
-   <TD>{{item.classname}}</TD>
-   <TD>{{item.successre}}</TD>
-   <TD>{{item.failurere}}</TD>
-   <TD>{{item.time}}</TD>
-     <TD>{{item.status}}</TD>
+  <TD>{{item.classname}}</TD>
+  <TD>{{item.successre}}</TD>
+  <TD>{{item.failurere}}</TD>
+  <TD>{{item.time}}</TD>
+  <TD>{{item.date}}</TD>
+  <TD>{{item.status}}</TD>
 </TR>
 {% endfor %}
