--- a/.github/workflows/system-tests-files/report_index_template.html
+++ b/.github/workflows/system-tests-files/report_index_template.html
@@ -40,7 +40,7 @@ This live dashboard displays the current health of Teradata system tests availab
   <TD>{{item.successre}}</TD>
   <TD>{{item.failurere}}</TD>
   <TD>{{item.time}}</TD>
-  <TD>{{item.date}}</TD>
+  <TD>{{item.lastrundate}}</TD>
   <TD>{{item.status}}</TD>
 </TR>
 {% endfor %}
