--- a/.github/workflows/system-tests-files/report_index_template.html
+++ b/.github/workflows/system-tests-files/report_index_template.html
@@ -30,7 +30,7 @@ This live dashboard displays the current health of Teradata system tests availab
     <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(2)')">Successes</th>
     <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(3)')">Failures</th>
 	  <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(4)')">Duration</th>
-    <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(4)')">Last Run Date</th>
+    <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(4)')">Last Run Date (MM-DD-YYYY)</th>
     <th onclick="w3.sortHTML('#myTable','.item', 'td:nth-child(5)')">Last 10 runs (latest on the right)</th>
   </tr>
 
